@@ -1,3 +1,4 @@
+import com.google.gson.Gson;
 import jakarta.xml.bind.JAXBContext;
 import jakarta.xml.bind.JAXBException;
 import jakarta.xml.bind.Unmarshaller;
@@ -11,6 +12,9 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
+import static java.lang.Double.parseDouble;
+import static java.lang.Integer.parseInt;
+
 public class Mundial {
 
     public static List<Piloto> leerPilotos() {
@@ -23,26 +27,43 @@ public class Mundial {
             Drivers piloto = (Drivers) jaxbUnmarshaller.unmarshal(ruta.toFile());
             listaPilotos = piloto.getDrivers();
         } catch (JAXBException e) {
+            System.out.println("Error. Archivo XML no encontrado.");
             e.printStackTrace();
         }
         return listaPilotos;
     }
     
     public static List<Circuito> leerCircuitos() {
-        List<List<String>> listaCircuito = new ArrayList<>();
-        Path ruta = Path.of("Unidad1/Examen/data/pilotos.xml");
-        try (Stream<String> contenidoFichero = Files.lines(Paths.get(ruta))) {
-            listacarrera = contenidoFichero.map(l -> Arrays.asList(l.split(","))).toList();
+        List<String> line;
+        Circuito carrera;
+        List<List<String>> listaCircuitoResult = new ArrayList<>();
+        List<Circuito> listaCircuito = new ArrayList<>();
+        Path ruta = Path.of("Unidad1/Examen/data/circuitos.csv");
+        try (Stream<String> contenidoFichero = Files.lines(ruta)) {
+            listaCircuitoResult = contenidoFichero.map(l -> Arrays.asList(l.split(","))).toList();
         } catch (IOException e) {
-            System.out.println("Error");
+            System.out.println("Error. Archivo CSV no encontrado.");
             e.printStackTrace();
         }
-        return listacarrera;
+        for (int i = 1; i < listaCircuitoResult.size(); i++) {
+            line = listaCircuitoResult.get(i);
+            carrera = new Circuito(parseInt(line.get(0)), line.get(1), line.get(2));
+            listaCircuito.add(carrera);
+        }
+        return listaCircuito;
     }
 
     public static List<Resultado> leerResultados(List<Circuito> circuitos, List<Piloto> pilotos) {
-
-        return null;
+        List<Resultado> listaRsultado = new ArrayList<>();
+        try {
+            String data = new String(Files.readString(Paths.get("Unidad1/Examen/data/resultados.json")));
+            Gson gson = new Gson();
+            listaRsultado = Arrays.stream(gson.fromJson(data, Resultado[].class)).toList();
+        } catch (IOException e) {
+            System.err.println("Error. Archivo JSON no encontrado.");
+            e.printStackTrace();
+        }
+        return listaRsultado;
     }
 
     public static void imprimirClasificacionFinal(List<Resultado> resultados) {
@@ -58,7 +79,7 @@ public class Mundial {
 		//System.out.println(pilotos);
 
         List<Circuito> circuitos = leerCircuitos();
-		// System.out.println(circuitos);
+		//System.out.println(circuitos);
 
         List<Resultado> resultados = leerResultados(circuitos, pilotos);
 
